/*
** EPITECH PROJECT, 2023
** B_OOP_400_REN_4_1_arcade_jason_lagoute
** File description:
** Input.hpp
*/

#ifndef INPUT_HPP_
    #define INPUT_HPP_

    namespace Arcade {
        /**
         * Creating a list of inputs that can be used in the game.
         */
        enum Input {
            UP,
            DOWN,
            LEFT,
            RIGHT,
            ENTER,
            ESCAPE,
            SPACE,
            PREV_LIB,
            NEXT_LIB,
            PREV_GAME,
            NEXT_GAME,
            RESTART,
            MENU,
            MUTE,
            NONE,
            A,
            B,
            C,
            D,
            E,
            F,
            G,
            H,
            I,
            J,
            K,
            L,
            M,
            N,
            O,
            P,
            Q,
            R,
            S,
            T,
            U,
            V,
            W,
            X,
            Y,
            Z,
            UNKNOWN
        };
    }

#endif /*INPUT_HPP_*/
